- added text-filter on Errorlog.Message - added table-navigation and found-rows for Errorlog - put too long Debug-info into 2nd line in table-rows - bugfix date-filter-const (FRDTU_ABS_ALL -> FRDTU_ALL_ABS)

--- a/skins/dragon/screen.css
+++ b/skins/dragon/screen.css
@@ -2809,6 +2809,10 @@ table#adminsTable, table#faqlogTable, table#errorlogTable td {
 }
 
 
+span.DebugText {
+   font-size: smaller;
+}
+
 /* ------------------------- */
 /* edit profile page */
 /* ------------------------- */
